[package]
name = "smartcounter"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-dom = { path = "../../crates/dom" }
gloo-timers = { path = "../../crates/timers" }
wasm-bindgen = "0.2.37"
wasm-bindgen-futures = "0.3.16"
futures = "0.1.25"
web-sys = "0.3.16"
